# advanced-youtube-search

./: .env.example  pyproject.toml  run.py
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/youtube/: __init__.py  search.py
src/apps/youtube_search/: dependencies.py  enums.py  query_params.py  schemas.py
src/apps/youtube_search/routers/: local_router.py  search.py
src/apps/youtube_search/services/: parser.py  search.py
src/dependencies/: youtube.py
src/enums/: youtube.py
src/integrations/: youtube.py
src/schemas/: youtube.py
src/services/youtube/: parser.py  search.py
src/youtube_integration/: client.py
