[tool.poetry]
name = "advanced-youtube-search"
version = "0.1.0"
description = ""
authors = ["DorLex <dorozhinskiysanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"
google-api-python-client = "^2.147.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
